# leela-sae

./: .gitignore  CLAUDE.md  DESIGN.md  pyproject.toml
configs/: default.yaml
scripts/: 01_reproduce_move.py  02_train_small.py  evals.ipynb  eyeball_features.ipynb
src/: __init__.py  hook.py  sae.py  train.py
src/autointerp/: __init__.py
src/data/: __init__.py  cache.py  positions.py  shuffle_buffer.py
src/eval/: __init__.py  board_props.py  causal.py  correlational.py  feature_mining.py
src/viz/: __init__.py  features.py
tests/: test_board_props.py  test_cache.py  test_causal.py  test_correlational.py  test_feature_mining.py  test_features.py  test_hook.py  test_sae.py  test_train.py
