[project]
name = "leela-sae"
version = "0.1.0"
description = "Train a sparse autoencoder on a Leela Chess Zero residual stream and validate features against chess ground truth."
readme = "DESIGN.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    # --- core: hook + SAE (steps 1-2) ---
    "lczerolens[hf,viz]>=0.4.0",  # load BT nets via from_hf, differentiable graph
    "torch>=2.5.0",
    "chess>=1.11",                # python-chess: board-state ground truth
    "numpy>=1.26",
    "pyyaml>=6.0",                # config loading
    # --- data pipeline (step 3) ---
    "ray>=2.40",                  # parallel position generation + shuffle plumbing
    # --- scaling + logging (step 3b) ---
    "accelerate>=1.0",            # multi-GPU wrapper (after single-GPU loop works)
    "wandb>=0.18",
    "matplotlib>=3.10",
    # --- auto-interp (step 5, side deliverable) ---
    "dspy>=3.0",
    "nnsight>=0.7.0",
]

[build-system]
# Editable install of this repo so `from src import hook` resolves from anywhere
# (scripts, notebooks) without PYTHONPATH games. Hatchling is the lightweight
# PEP 517/660 backend uv ships with.
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Our importable package is literally `src` (the code does `from src import ...`),
# not `leela_sae`, so name it explicitly — hatchling can't infer it from the
# project name.
packages = ["src"]

[project.optional-dependencies]
# Heavy, CUDA/Python-version-sensitive vLLM labeler — install explicitly:
#   uv sync --extra serve
serve = ["vllm>=0.6"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
# package = false means the repo isn't installed; put the root on sys.path so the
# design's own test imports (`from src.sae import TopKSAE`) resolve under `uv run pytest`.
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    # onnx2torch's Slice converter indexes a tensor with a Python list; PyTorch deprecated that
    # (message says "pytorch 2.9", we're already on 2.11). It's THIRD-PARTY (lczerolens -> onnx2torch),
    # not our code, and the net still loads + reproduces moves correctly, so it's pure log noise.
    # Scoped narrowly by message + module so we never silence a warning from OUR code.
    "ignore:Using a non-tuple sequence for multidimensional indexing is deprecated:UserWarning:onnx2torch.node_converters.slice",
]

[tool.uv]
# Install this repo as an editable package so `from src import ...` works from
# scripts and notebooks, not just under pytest's `pythonpath`. Still a research
# artifact (DESIGN.md non-goal): we don't publish it, just install it locally.
package = true
# Keep the default sync lean; vLLM is opt-in via the `serve` extra.
default-groups = ["dev"]
